--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -51,13 +51,23 @@
   cursor: pointer;
 }
 
-.content {
-  display: block;
+.row {
+  display: flex;
   margin-left: 10px;
   margin-right: 10px;
   max-width: 900px;
+  align-items: flex-start;
 }
 
-@media (max-width: 600px) {
-
+.smallCol {
+  flex: 1;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
 }
+
+.bigCol {
+  flex: 4;
+}
+
+@media (max-width: 600px) {}
