--- a/styles/Pills.module.css
+++ b/styles/Pills.module.css
@@ -3,7 +3,9 @@
     border-radius: 15px;
     padding: .15rem 0.75rem;
     margin-right: 5px;
+    margin-top: 5px;
     position: relative;
     border: solid .2em mediumorchid;
     color: mediumorchid;
+    background-color: black;
 }
