--- a/styles/ExtIconGroup.module.css
+++ b/styles/ExtIconGroup.module.css
@@ -5,3 +5,42 @@
 .icon:hover {
     color: deepskyblue;
 }
+
+.tooltip {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 70px;
+    background-color: slategray;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -35px;
+    margin-top: 5px;
+    font-size: small;
+    font-weight: 500;
+}
+
+.tooltip .tooltiptext::after {
+    content: " ";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent slategray transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
